--- a/docs/posts/05wk-2.out.ipynb
+++ b/docs/posts/05wk-2.out.ipynb
@@ -17,11 +17,11 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "1897d734-db7f-46ba-8b50-5992de8d5f4d"
+      "id": "60b32050-8903-488e-a1f0-e4847febf90d"
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "tags": []
       },
@@ -29,8 +29,8 @@
       "source": [
         "import torch\n",
         "import matplotlib.pyplot as plt\n",
-        "from fastai.data.all import *\n",
-        "import torchvision"
+        "import torchvision\n",
+        "import fastai.data.all "
       ],
       "id": "b97e7cfa-2e5c-4b08-b735-5ff46de7869b"
     },
@@ -42,17 +42,17 @@
         "\n",
         "`-` download data"
       ],
-      "id": "f13c9213-44ed-4cf2-a2a3-2a730767ac77"
+      "id": "17d9c463-5db4-48d1-aed7-33926f531899"
     },
     {
       "cell_type": "code",
-      "execution_count": 124,
+      "execution_count": 4,
       "metadata": {
         "tags": []
       },
       "outputs": [],
       "source": [
-        "path = untar_data(URLs.MNIST)"
+        "path = fastai.data.external.untar_data('https://s3.amazonaws.com/fast-ai-imageclas/mnist_png.tgz')"
       ],
       "id": "21f4d9dc-8718-40dc-b172-9edc1db81f7b"
     },
@@ -62,7 +62,7 @@
       "source": [
         "`-` training set"
       ],
-      "id": "0d6f4d4e-70f0-4286-820f-fae2d3d13447"
+      "id": "fa78cd31-4294-4e97-85b8-9acda371fae7"
     },
     {
       "cell_type": "code",
@@ -85,7 +85,7 @@
       "source": [
         "`-` test set"
       ],
-      "id": "81a0847b-5f62-493c-b83e-778e4624ba43"
+      "id": "949aa9e4-f24b-4443-8db0-4dafa9b9e6c3"
     },
     {
       "cell_type": "code",
@@ -161,7 +161,7 @@
         "\n",
         "**(예시1)**"
       ],
-      "id": "0991690f-c325-433d-837a-89d65772340b"
+      "id": "67a07263-58dd-49f8-939d-868e45b0ca9e"
     },
     {
       "cell_type": "code",
@@ -221,7 +221,7 @@
       "source": [
         "**(예시2) 평균**"
       ],
-      "id": "00499f22-9586-4345-a3e6-81b119d1578c"
+      "id": "f50540c8-1956-49df-b79a-a4462e5809e4"
     },
     {
       "cell_type": "code",
@@ -267,7 +267,7 @@
       "source": [
         "**(예시3) 이동평균?**"
       ],
-      "id": "42ac1140-ae59-45b5-bbbd-247d9affa631"
+      "id": "1d2931f6-4944-4085-a201-596547f0b838"
     },
     {
       "cell_type": "code",
@@ -288,7 +288,7 @@
       "source": [
         "**(예시4) window size가 증가한다면? (2d의 이동평균느낌)**"
       ],
-      "id": "cbf4b78d-404f-411f-ae00-c19dc8d16f24"
+      "id": "acf69167-1f4a-4039-9a64-c5d686eb0d57"
     },
     {
       "cell_type": "code",
@@ -323,7 +323,7 @@
       "source": [
         "**(예시5)** 2개의 이미지"
       ],
-      "id": "44eb1596-a57a-4b47-8814-a761eeb735b0"
+      "id": "3a7752ce-e139-4e6b-9e63-d4827a9955a1"
     },
     {
       "cell_type": "code",
@@ -358,7 +358,7 @@
       "source": [
         "**(예시6) 피처뻥튀기**"
       ],
-      "id": "79d303af-b822-4fd8-bbb2-b0aca0799c70"
+      "id": "4fc813c8-db54-4d35-9dc1-59ecc5f219d0"
     },
     {
       "cell_type": "code",
@@ -391,7 +391,7 @@
       "source": [
         "## D. `torch.nn.ReLU`"
       ],
-      "id": "e6c376f3-571d-433d-8a0f-2e212ebf1b08"
+      "id": "3486dec9-bcb9-4f8b-9ee3-1d9b5830bf34"
     },
     {
       "cell_type": "code",
@@ -413,7 +413,7 @@
       "source": [
         "## E. `torch.nn.MaxPool2d`"
       ],
-      "id": "5a805a8f-4ec9-44df-bab0-2446fff8ed96"
+      "id": "baaadee7-1fb1-428c-9f6f-3bfbefecf715"
     },
     {
       "cell_type": "code",
@@ -435,7 +435,7 @@
       "source": [
         "# 5. MNIST(CPU)"
       ],
-      "id": "0668f463-5792-4731-af49-943277541804"
+      "id": "dc51599c-76ad-4b77-b012-80cf8d9ec8d6"
     },
     {
       "cell_type": "code",
@@ -455,7 +455,7 @@
       "source": [
         "## A. Conv2d"
       ],
-      "id": "41fbd75d-62cc-4368-9ec2-b94d105fd2ad"
+      "id": "59750383-7e1a-4ca7-bad0-948c6aa4c2a6"
     },
     {
       "cell_type": "code",
@@ -486,7 +486,7 @@
       "source": [
         "## B. ReLU"
       ],
-      "id": "b7cd4388-16de-492c-bae8-0a5deeb05814"
+      "id": "670db29a-a7df-4adf-a89e-b0b3ef27c177"
     },
     {
       "cell_type": "code",
@@ -519,7 +519,7 @@
       "source": [
         "## C. MaxPool2D"
       ],
-      "id": "af7a913c-7b5d-4286-9b08-339135f905d6"
+      "id": "31a2adf1-8e17-40af-95e3-6de32e055661"
     },
     {
       "cell_type": "code",
@@ -558,7 +558,7 @@
         "\n",
         "(방법1)"
       ],
-      "id": "2e566ca2-eb69-4367-af05-0adafc2f77a8"
+      "id": "f300708e-34c3-4ada-ac7c-f812dbec801e"
     },
     {
       "cell_type": "code",
@@ -578,7 +578,7 @@
       "source": [
         "(방법2)"
       ],
-      "id": "437f1b66-c65f-4286-9832-8b2e93c97522"
+      "id": "1e864731-5359-4dfe-a092-54ec7642898f"
     },
     {
       "cell_type": "code",
@@ -626,7 +626,7 @@
       "source": [
         "`-` 2304 $\\to$ 1 로 차원축소하는 선형레이어를 설계"
       ],
-      "id": "a5ebb520-be4d-4b82-a655-104c87d08e3f"
+      "id": "2f0c1cb9-9d80-4bf6-96e4-cbb7b8ac0747"
     },
     {
       "cell_type": "code",
@@ -665,7 +665,7 @@
       "source": [
         "`-` 시그모이드"
       ],
-      "id": "91c2f96b-611c-4d68-ab48-9c091813bef3"
+      "id": "cce3a2cc-cfdc-4138-82fc-fec5bfc40712"
     },
     {
       "cell_type": "code",
@@ -720,7 +720,7 @@
         "\n",
         "`-` 네트워크 설계"
       ],
-      "id": "3acecf8b-54cf-452b-a793-e8d7ee5039eb"
+      "id": "4bf820f6-7833-4028-927a-cf308298c848"
     },
     {
       "cell_type": "code",
@@ -803,7 +803,7 @@
       "source": [
         "# 6. MNIST (GPU)"
       ],
-      "id": "efc50f83-6491-4820-aeca-8fa1f727b88d"
+      "id": "6a08b359-c83a-4d19-ad51-1cf32eff5b05"
     },
     {
       "cell_type": "code",
