--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "0c3ed529-b767-44c1-bb31-ec24cf3b98ba"
+      "id": "6d457a2a-3975-4a82-bb2c-e24c66fde5ee"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "f3b43d09-2382-433c-9ac3-5e0a20777918"
+      "id": "33d26ffa-ce66-462a-a1cc-44a24c20a5d3"
     },
     {
       "cell_type": "code",
@@ -69,7 +69,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "bdc17ea0-37a0-4644-b546-5ea4019021c1"
+      "id": "f5c6a6fa-2e71-4369-a44f-56c8fb88acf5"
     },
     {
       "cell_type": "code",
@@ -140,7 +140,7 @@
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "814c778c-329b-4505-8f74-a08b8e563fa3"
+      "id": "54b7a458-931d-4ea8-829b-48ea8a8b8080"
     },
     {
       "cell_type": "code",
@@ -227,7 +227,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "a13fe958-b190-4c5d-be3d-c0b37690d58e"
+      "id": "1c259e6e-8a01-40a3-a484-dd63d9f75ffc"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "cac59256-fab7-4f64-8dd4-dc932359c90a"
+      "id": "81c81888-45d3-4306-8208-ec08575ab8ba"
     },
     {
       "cell_type": "code",
@@ -311,7 +311,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "bc3b74e8-2a60-4521-b2f1-776e1dca69bc"
+      "id": "bc48bec3-873f-4406-97e2-01c75b3b90f0"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "c8f1e0bb-c3a1-4309-9d0f-cd2777e91701"
+      "id": "77743874-9b59-4afd-9e79-259b7ebe0dc9"
     },
     {
       "cell_type": "code",
@@ -353,7 +353,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "eeef3dc7-247d-4897-9b1f-549291b1c4c1"
+      "id": "430f234b-7eb8-46bb-bf82-7f8d75501ef9"
     },
     {
       "cell_type": "code",
@@ -385,22 +385,11 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
-        "    v_{11} & v_{12}  \\\\\n",
-        "    v_{21} & v_{22}  \\\\\n",
-        "    \\dots & \\dots  \\\\\n",
-        "    v_{n1} & v_{n2}  \\\\\n",
-        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
-        "    \\begin{bmatrix}\n",
-        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
-        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
-        "    \\dots \\\\\n",
-        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
-        "    \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "3960a202-2ac2-4404-9992-441f8a36e9c7"
+      "id": "0bd4ff2d-ff75-4b1e-af95-bb794e3f8ecc"
     },
     {
       "cell_type": "code",
@@ -423,7 +412,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "00cf715d-c820-4c16-a4bb-12ca5a923a24"
+      "id": "eb663528-f2e3-4fdf-a950-531698cb91c7"
     },
     {
       "cell_type": "code",
@@ -478,7 +467,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "dd807a85-0dcf-4d90-9edb-34bddd91a6dc"
+      "id": "1f4c09a8-d826-4d1e-a201-21a40826c3d2"
     },
     {
       "cell_type": "code",
@@ -525,7 +514,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "67ee05f9-8d26-40b7-a4b5-d8010091b378"
+      "id": "255f37a8-defc-4a7f-89b3-f7dec4c7faaf"
     },
     {
       "cell_type": "code",
@@ -564,7 +553,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "e0c9988c-366c-4897-9b99-35e3dce0c19f"
+      "id": "eea3f369-4727-4e40-b97d-03b80f8327e3"
     },
     {
       "cell_type": "code",
@@ -633,7 +622,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "ac88d546-2420-4ce2-a013-144d4df45342"
+      "id": "8577b89a-0845-4ec0-8c20-f34334f6f846"
     },
     {
       "cell_type": "code",
@@ -698,7 +687,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "32483d8f-7f2d-4f34-b4fb-ff6a9d0b44dc"
+      "id": "a35e8e10-4030-4c72-9f90-2d508a14e7ed"
     },
     {
       "cell_type": "code",
