--- a/posts/ref.bib
+++ b/posts/ref.bib
@@ -31,3 +31,11 @@
   volume={25},
   year={2012}
 }
+
+@inproceedings{zhou2016learning,
+  title={Learning deep features for discriminative localization},
+  author={Zhou, Bolei and Khosla, Aditya and Lapedriza, Agata and Oliva, Aude and Torralba, Antonio},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={2921--2929},
+  year={2016}
+}
