--- a/docs/posts/04wk-2.out.ipynb
+++ b/docs/posts/04wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "7c819976-6b58-47e1-b026-fbb2938716d6"
+      "id": "5750ceb0-839b-4883-a17c-42ef14d394a8"
     },
     {
       "cell_type": "code",
@@ -63,7 +63,7 @@
         "model: $y_i = (0\\times x_i) + \\epsilon_i$, where\n",
         "$\\epsilon_i \\sim N(0,0.01^2)$"
       ],
-      "id": "8bbc4543-375c-4e98-9798-de79498970a6"
+      "id": "beaeab7b-e80e-42cd-be36-abc08ebebf78"
     },
     {
       "cell_type": "code",
@@ -95,7 +95,7 @@
         "-   y는 그냥 정규분포에서 생성한 오차이므로 $X \\to y$ 로 향하는\n",
         "    규칙따위는 없음"
       ],
-      "id": "9492260d-55a3-423f-aac2-f11557086307"
+      "id": "27c67cc5-5d4e-4efd-9a91-86e389c2366b"
     },
     {
       "cell_type": "code",
@@ -158,7 +158,7 @@
         "\n",
         "`-` 데이터의 분리하여 보자."
       ],
-      "id": "b9926084-29d9-4d7d-bf32-c36418f21555"
+      "id": "9dc4fe22-21ed-4b41-b96f-233d809292ec"
     },
     {
       "cell_type": "code",
@@ -195,7 +195,7 @@
       "source": [
         "`-` train만 학습"
       ],
-      "id": "c3923fc7-f976-4a8b-ac80-c118460763a0"
+      "id": "90829afe-cf60-4621-8297-91972c29cb10"
     },
     {
       "cell_type": "code",
@@ -232,7 +232,7 @@
       "source": [
         "`-` training data로 학습한 net를 training data 에 적용"
       ],
-      "id": "2ef47dbf-c801-4c43-be87-056890c4c65f"
+      "id": "1e3a0781-0f9a-47fe-8748-e700287786a5"
     },
     {
       "cell_type": "code",
@@ -265,7 +265,7 @@
         "\n",
         "`-` training data로 학습한 net를 test data 에 적용"
       ],
-      "id": "90b2d185-796a-4282-8cff-aed7df0188d0"
+      "id": "9235bb51-5592-435e-b807-6481b2d61adb"
     },
     {
       "cell_type": "code",
@@ -345,7 +345,7 @@
         "[1] 여기에서 우수하다는 말은 여러의미가 있어요, 오버피팅이 없는\n",
         "신경망이라든가, 경제적인 신경망이라든가.."
       ],
-      "id": "bd790584-a664-4b9a-a034-81db20857982"
+      "id": "6f4ecf46-1b20-4872-ad76-4ef04f66f093"
     },
     {
       "cell_type": "code",
@@ -382,7 +382,7 @@
       "source": [
         "`-` 학습"
       ],
-      "id": "bcc33308-aa31-4fbd-adda-f05f5872fb2e"
+      "id": "df7276be-2064-43d7-8f27-36466847f5d9"
     },
     {
       "cell_type": "code",
@@ -421,7 +421,7 @@
       "source": [
         "`-` 결과시각화 (잘못된 사용)"
       ],
-      "id": "875a0b72-2f39-49f5-9df6-437e859298bf"
+      "id": "b4e7a27e-d32f-45fb-9a18-af662da72ba2"
     },
     {
       "cell_type": "code",
@@ -456,7 +456,7 @@
         "\n",
         "`-` 결과시각화 (올바른 사용)"
       ],
-      "id": "ec963009-de64-48bf-8f49-b3951da786e7"
+      "id": "9d9121f5-89f7-4167-8459-f399edbc218e"
     },
     {
       "cell_type": "code",
@@ -515,7 +515,7 @@
         "\n",
         "## B. 드랍아웃 레이어"
       ],
-      "id": "1f1d85fd-9b91-4063-ad5b-92a80a2ff9bd"
+      "id": "8586d73a-348f-4b91-b4c5-f2cbd65325ab"
     },
     {
       "cell_type": "code",
@@ -573,7 +573,7 @@
         "\n",
         "`-` ReLU + dropout의 특이한 성질"
       ],
-      "id": "315771ab-9bf7-4742-a183-4b7f934e4c78"
+      "id": "18485783-30cd-4eb7-8753-c0e3d713e05d"
     },
     {
       "cell_type": "code",
@@ -694,7 +694,7 @@
         "“선형변환+비선형변환”이 반복되는 구조이다. “선형변환+비선형변환”을\n",
         "하나의 세트로 보면 아래와 같이 표현할 수 있다.\n",
         "\n",
-        "-   $\\underset{(n,1)}{\\bf X} \\overset{l_1}{\\to} \\left( \\underset{(n,2)}{\\boldsymbol u^{(1)}} \\overset{relu}{\\to} \\underset{(n,2)}{\\boldsymbol v^{(1)}} \\right) \\overset{l_2}{\\to} \\left(\\underset{(n,1)}{\\boldsymbol u^{(2)}} \\overset{sig}{\\to} \\underset{(n,1)}{\\boldsymbol v^{(2)}}\\right), \\quad \\underset{(n,1)}{\\boldsymbol v^{(2)}}=\\underset{(n,1)}{net({\\bf X})}=\\underset{(n,1)}{\\hat{\\boldsymbol y}}$\n",
+        "-   $\\underset{(n,1)}{\\bf X}  \\overset{l_1}{\\to} \\left( \\underset{(n,2)}{\\boldsymbol u^{(1)}} \\overset{relu}{\\to} \\underset{(n,2)}{\\boldsymbol v^{(1)}} \\right) \\overset{l_2}{\\to} \\left(\\underset{(n,1)}{\\boldsymbol u^{(2)}} \\overset{sig}{\\to} \\underset{(n,1)}{\\boldsymbol v^{(2)}}\\right), \\quad  \\underset{(n,1)}{\\boldsymbol v^{(2)}}=\\underset{(n,1)}{net({\\bf X})}=\\underset{(n,1)}{\\hat{\\boldsymbol y}}$\n",
         "\n",
         "이것을 다이어그램으로 표현한다면 아래와 같다.\n",
         "\n",
@@ -855,7 +855,7 @@
         "\n",
         "아래의 아키텍처를 가지는 네트워크를 파이토치코드로 선언하라.\n",
         "\n",
-        "<figure>\n",
+        "<figure class=\"margin-caption\">\n",
         "<img\n",
         "src=\"https://d2908q01vomqb2.cloudfront.net/f1f836cb4ea6efb2a0b1b99f41ad8b103eff4b59/2017/10/06/intro-gluon-1.gif\"\n",
         "alt=\"출처: https://aws.amazon.com/ko/what-is/deep-learning/\" />\n",
@@ -864,7 +864,7 @@
         "class=\"uri\">https://aws.amazon.com/ko/what-is/deep-learning/</a></figcaption>\n",
         "</figure>"
       ],
-      "id": "6bc904ac-f648-41bc-bdb4-842d4a2c06ea"
+      "id": "4a7c9083-9235-4f3d-86d7-22f5fbf56724"
     },
     {
       "cell_type": "code",
@@ -897,7 +897,7 @@
         "and the Theory of Brain Mechanisms*. Vol. 55. Spartan books Washington,\n",
         "DC."
       ],
-      "id": "a6642919-4708-4873-adc9-74477d39d5b7"
+      "id": "2411fa5a-45bc-4150-877c-49e6aa89091b"
     }
   ],
   "nbformat": 4,
