--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "ccaafe1d-dbd0-497b-a796-9706a8d45483"
+      "id": "11617399-02be-470a-a0ac-c6f4a27636c8"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "a66d15ee-107f-4260-95bf-9798048c4ab9"
+      "id": "0c574861-ba26-4984-822b-72dde84e1f4f"
     },
     {
       "cell_type": "code",
@@ -69,7 +69,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "a73dd100-7723-4b80-845a-adedde9ccf9b"
+      "id": "5e87a2e9-dffe-42d2-9772-81adedd3ba90"
     },
     {
       "cell_type": "code",
@@ -140,7 +140,7 @@
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "f6355677-4d23-48c7-a675-86f4d955f1dd"
+      "id": "8e32a017-03ca-4852-b5ea-45663c2adadd"
     },
     {
       "cell_type": "code",
@@ -227,7 +227,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "b0c92a89-71b3-442b-bd39-8e56b41f627e"
+      "id": "38c16605-5d5f-4aa3-bd3b-dc5b62106db5"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "abef55fc-60d3-4a54-9c7b-ef6b7291bccf"
+      "id": "6a8d0309-a87d-48b0-8435-addbb658e18c"
     },
     {
       "cell_type": "code",
@@ -311,7 +311,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "907f098a-a25e-43f8-927f-18c5939aa9f2"
+      "id": "32b15c4b-e7e8-4629-926c-cda2ea4d26f9"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "72018e9b-2d05-46a6-869e-5a4e33c33a72"
+      "id": "8a807d13-9c74-4c05-994b-d6c9103d1daa"
     },
     {
       "cell_type": "code",
@@ -353,7 +353,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "6abef990-7efb-46f9-a956-223d0cdc4259"
+      "id": "c5a637df-4e84-44e0-9195-8a925b426049"
     },
     {
       "cell_type": "code",
@@ -385,11 +385,22 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
+        "    v_{11} & v_{12}  \\\\\n",
+        "    v_{21} & v_{22}  \\\\\n",
+        "    \\dots & \\dots  \\\\\n",
+        "    v_{n1} & v_{n2}  \\\\\n",
+        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
+        "    \\begin{bmatrix}\n",
+        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
+        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
+        "    \\dots \\\\\n",
+        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
+        "    \\end{bmatrix}$\n",
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "b3c0c5bc-35d7-4be1-bb44-737008a12566"
+      "id": "91758bd7-4ed9-4fc2-8c1e-76e809cd8d82"
     },
     {
       "cell_type": "code",
@@ -412,7 +423,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "56400e3b-3532-4ce8-963e-be192562bf51"
+      "id": "3f0b1d4a-90f8-4309-b49b-da8b43e5db2e"
     },
     {
       "cell_type": "code",
@@ -467,7 +478,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "f72c5464-9e8e-483f-a0b5-20a70936f182"
+      "id": "5dca1e76-583a-4714-afbe-e2fda96b8f94"
     },
     {
       "cell_type": "code",
@@ -514,7 +525,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "ad480155-911c-4e2a-b467-dce3b2d300bc"
+      "id": "712e5e05-888d-4c0f-9527-f9aeeadff55f"
     },
     {
       "cell_type": "code",
@@ -553,7 +564,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "2d02fd76-c011-4e32-ae0a-7685831068fb"
+      "id": "7e3e974c-afc3-4227-afac-c95f875281a3"
     },
     {
       "cell_type": "code",
@@ -622,7 +633,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "7420fc86-98d2-49c9-af71-d213e1b17dc9"
+      "id": "dcf91bff-07e9-42ec-a016-24d71198f521"
     },
     {
       "cell_type": "code",
@@ -687,7 +698,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "840cce59-42c3-4456-88b9-61184b8fb741"
+      "id": "b4562a13-b425-44b4-b8c5-3e18ce827e64"
     },
     {
       "cell_type": "code",
