--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "1e690d12-502c-489b-8bdf-6e51b0a013a9"
+      "id": "e34f4d94-f07a-44bc-a49f-109ab9734c05"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "a234508f-5a95-4b1c-a4a4-0ab7efe2f747"
+      "id": "96314198-29cc-48a4-8dbd-9bf69a5cdec5"
     },
     {
       "cell_type": "code",
@@ -69,7 +69,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "31c12514-aac3-4d4a-bbca-00491400eb99"
+      "id": "9292e026-99f8-4ab9-ad83-74ca6a769ba1"
     },
     {
       "cell_type": "code",
@@ -140,7 +140,7 @@
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "ea94ba5b-5b29-441d-b17d-dfe967875253"
+      "id": "4f229673-8556-43cf-898b-4cbd9b2510ec"
     },
     {
       "cell_type": "code",
@@ -227,7 +227,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "d26961f2-cd71-4b50-8209-22ba32fc7a71"
+      "id": "1987d9d4-aec9-4203-903d-cb47c2e8adee"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "d20de0a1-212d-4042-92ac-6e8c468faf63"
+      "id": "7419716b-d9c7-499c-bdb6-b2d8f75c5072"
     },
     {
       "cell_type": "code",
@@ -311,7 +311,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "5b968546-6a47-445c-8933-45e20a991abb"
+      "id": "58d7ff06-e790-4ebe-a5be-9993f92be8af"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "0164b6c4-4dd3-43c2-9010-7852bf3093ee"
+      "id": "3dff9e92-0129-4db2-93b1-f01994aec926"
     },
     {
       "cell_type": "code",
@@ -353,7 +353,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "bd042820-a042-4b1b-8658-62a0877d5f76"
+      "id": "27c3c9d6-271c-47d5-9810-52b2c252e0b2"
     },
     {
       "cell_type": "code",
@@ -385,22 +385,11 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
-        "    v_{11} & v_{12}  \\\\\n",
-        "    v_{21} & v_{22}  \\\\\n",
-        "    \\dots & \\dots  \\\\\n",
-        "    v_{n1} & v_{n2}  \\\\\n",
-        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
-        "    \\begin{bmatrix}\n",
-        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
-        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
-        "    \\dots \\\\\n",
-        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
-        "    \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "003b5567-4054-49f7-9a9f-32b1685e640a"
+      "id": "62335bd2-0bff-419c-aac5-5e0f7b0052dd"
     },
     {
       "cell_type": "code",
@@ -423,7 +412,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "76e98ed2-dbf9-4a21-b7be-6fbea1823eb4"
+      "id": "3b4607f8-4e89-426b-b436-57d02c7917d9"
     },
     {
       "cell_type": "code",
@@ -478,7 +467,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "99e5dfb4-c80d-4357-b43c-101e84b1f073"
+      "id": "1b63ceb3-8621-4213-8dba-917162a8f0d0"
     },
     {
       "cell_type": "code",
@@ -525,7 +514,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "e9604689-1e0b-47b2-a4d0-66e4c6b516fa"
+      "id": "13846e85-aa4a-4e03-b01e-69608a80a20a"
     },
     {
       "cell_type": "code",
@@ -564,7 +553,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "ed0e1019-39f5-44c8-97d0-c817badcb810"
+      "id": "e9b86d24-1408-41b0-9625-a86c5fa33ea4"
     },
     {
       "cell_type": "code",
@@ -633,7 +622,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "ad7d5047-8d6a-4bc7-9056-8abddf5e4634"
+      "id": "3c3d49e9-8c36-4ce2-b8ba-821d853e86a1"
     },
     {
       "cell_type": "code",
@@ -698,7 +687,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "6a788d1b-f424-41c7-a99b-2e9caa9019f2"
+      "id": "2acaca2a-cbb1-4269-9b00-5ce059e31009"
     },
     {
       "cell_type": "code",
