--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "e34f4d94-f07a-44bc-a49f-109ab9734c05"
+      "id": "89e59462-5f15-48e3-95ce-5f8e4893395a"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "96314198-29cc-48a4-8dbd-9bf69a5cdec5"
+      "id": "c4693c5a-af07-4d5c-b18e-9388d993eb50"
     },
     {
       "cell_type": "code",
@@ -69,7 +69,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "9292e026-99f8-4ab9-ad83-74ca6a769ba1"
+      "id": "a96a2920-19c7-438f-8c82-938de1f64c01"
     },
     {
       "cell_type": "code",
@@ -140,7 +140,7 @@
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "4f229673-8556-43cf-898b-4cbd9b2510ec"
+      "id": "41a0e475-2512-48c6-a601-5436fa73ca9c"
     },
     {
       "cell_type": "code",
@@ -227,7 +227,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "1987d9d4-aec9-4203-903d-cb47c2e8adee"
+      "id": "f95d0fea-064b-4733-8658-ba72d6e5a133"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "7419716b-d9c7-499c-bdb6-b2d8f75c5072"
+      "id": "4266984d-dbab-42fe-af13-524b9dbe23ae"
     },
     {
       "cell_type": "code",
@@ -311,7 +311,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "58d7ff06-e790-4ebe-a5be-9993f92be8af"
+      "id": "8d802770-d165-4d39-b702-464d092c28fd"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "3dff9e92-0129-4db2-93b1-f01994aec926"
+      "id": "c7e2e37f-6765-4858-b6dc-482decafbad3"
     },
     {
       "cell_type": "code",
@@ -353,7 +353,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "27c3c9d6-271c-47d5-9810-52b2c252e0b2"
+      "id": "cbec90bf-d069-407b-a971-3404735a59e8"
     },
     {
       "cell_type": "code",
@@ -385,11 +385,22 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
+        "    v_{11} & v_{12}  \\\\\n",
+        "    v_{21} & v_{22}  \\\\\n",
+        "    \\dots & \\dots  \\\\\n",
+        "    v_{n1} & v_{n2}  \\\\\n",
+        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
+        "    \\begin{bmatrix}\n",
+        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
+        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
+        "    \\dots \\\\\n",
+        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
+        "    \\end{bmatrix}$\n",
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "62335bd2-0bff-419c-aac5-5e0f7b0052dd"
+      "id": "94faaaef-d601-4e1f-8c77-5a17d346067b"
     },
     {
       "cell_type": "code",
@@ -412,7 +423,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "3b4607f8-4e89-426b-b436-57d02c7917d9"
+      "id": "785677c9-1b6a-46eb-b0fb-5090fb28c79f"
     },
     {
       "cell_type": "code",
@@ -467,7 +478,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "1b63ceb3-8621-4213-8dba-917162a8f0d0"
+      "id": "8b70b0a5-4db7-49f0-8a0d-91361d5cadcb"
     },
     {
       "cell_type": "code",
@@ -514,7 +525,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "13846e85-aa4a-4e03-b01e-69608a80a20a"
+      "id": "5d679a1d-b0f3-4df2-a52c-5a928bfd0469"
     },
     {
       "cell_type": "code",
@@ -553,7 +564,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "e9b86d24-1408-41b0-9625-a86c5fa33ea4"
+      "id": "d9f3728a-92db-4594-ad04-dd4288716999"
     },
     {
       "cell_type": "code",
@@ -622,7 +633,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "3c3d49e9-8c36-4ce2-b8ba-821d853e86a1"
+      "id": "04713048-e85f-4ef0-ac72-f4280b8da4d2"
     },
     {
       "cell_type": "code",
@@ -687,7 +698,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "2acaca2a-cbb1-4269-9b00-5ce059e31009"
+      "id": "06a575f3-ea7c-4bee-b1e9-34d8847cf8f0"
     },
     {
       "cell_type": "code",
