--- a/docs/posts/04wk-2.out.ipynb
+++ b/docs/posts/04wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "29d9e4ec-bb9f-4aab-8a9d-1e0ba9efbe8c"
+      "id": "ea015a8a-e39e-4042-acc3-c76f8b654593"
     },
     {
       "cell_type": "code",
@@ -63,7 +63,7 @@
         "model: $y_i = (0\\times x_i) + \\epsilon_i$, where\n",
         "$\\epsilon_i \\sim N(0,0.01^2)$"
       ],
-      "id": "5f805174-4a68-41ba-885c-794de594a8bc"
+      "id": "4645b3f3-d342-4468-bb61-3416270dd3a7"
     },
     {
       "cell_type": "code",
@@ -95,7 +95,7 @@
         "-   y는 그냥 정규분포에서 생성한 오차이므로 $X \\to y$ 로 향하는\n",
         "    규칙따위는 없음"
       ],
-      "id": "c79a6753-4445-42f6-a950-5da303593d89"
+      "id": "2b7dfb16-ee5c-4890-a89d-df61eae564b0"
     },
     {
       "cell_type": "code",
@@ -158,7 +158,7 @@
         "\n",
         "`-` 데이터의 분리하여 보자."
       ],
-      "id": "ea1a5080-4507-43e2-a1e2-a7424492421e"
+      "id": "b96a0bf6-f739-4334-af42-119acad23c9e"
     },
     {
       "cell_type": "code",
@@ -195,7 +195,7 @@
       "source": [
         "`-` train만 학습"
       ],
-      "id": "88b19b22-1187-41f9-9241-3d821cd56265"
+      "id": "7d0e8763-2599-4f6c-9ead-f4ae30599164"
     },
     {
       "cell_type": "code",
@@ -232,7 +232,7 @@
       "source": [
         "`-` training data로 학습한 net를 training data 에 적용"
       ],
-      "id": "5932981e-b832-46c1-a424-3fe397d12422"
+      "id": "783a9753-27f2-4c3a-8254-7845a9b8544e"
     },
     {
       "cell_type": "code",
@@ -265,7 +265,7 @@
         "\n",
         "`-` training data로 학습한 net를 test data 에 적용"
       ],
-      "id": "cae87943-dfa6-4bd3-9e87-9f9969a55403"
+      "id": "8df70974-12c3-4e25-b3a7-0b37454ffe35"
     },
     {
       "cell_type": "code",
@@ -345,7 +345,7 @@
         "[1] 여기에서 우수하다는 말은 여러의미가 있어요, 오버피팅이 없는\n",
         "신경망이라든가, 경제적인 신경망이라든가.."
       ],
-      "id": "22c68c1c-e8de-443d-9629-74f691bbf3a6"
+      "id": "e234cbd3-8733-46fa-94fd-252b025d0fe0"
     },
     {
       "cell_type": "code",
@@ -382,7 +382,7 @@
       "source": [
         "`-` 학습"
       ],
-      "id": "19958397-f526-46e7-a6cd-c11edcef2296"
+      "id": "3917a984-4784-4f74-ad63-b16851600a5b"
     },
     {
       "cell_type": "code",
@@ -421,7 +421,7 @@
       "source": [
         "`-` 결과시각화 (잘못된 사용)"
       ],
-      "id": "974d9ec5-3663-4dc2-ba1e-e3baacf534f6"
+      "id": "d0b7d857-d2e8-48a6-9b6e-4e4ae36a7647"
     },
     {
       "cell_type": "code",
@@ -456,7 +456,7 @@
         "\n",
         "`-` 결과시각화 (올바른 사용)"
       ],
-      "id": "4cef961d-b7eb-4d45-bff8-4821280402db"
+      "id": "7eec8be0-add7-4c3e-a752-19079b39582e"
     },
     {
       "cell_type": "code",
@@ -515,7 +515,7 @@
         "\n",
         "## B. 드랍아웃 레이어"
       ],
-      "id": "1b33b7c7-e767-4b99-98ec-c7713392b97f"
+      "id": "ef674328-9a1e-486c-9f2f-5d744b1da8de"
     },
     {
       "cell_type": "code",
@@ -573,7 +573,7 @@
         "\n",
         "`-` ReLU + dropout의 특이한 성질"
       ],
-      "id": "cda9e13d-bb42-4f59-95c2-f347db2b98a0"
+      "id": "42c22a40-5784-485a-b3c2-ca6d5e51833d"
     },
     {
       "cell_type": "code",
@@ -694,7 +694,7 @@
         "“선형변환+비선형변환”이 반복되는 구조이다. “선형변환+비선형변환”을\n",
         "하나의 세트로 보면 아래와 같이 표현할 수 있다.\n",
         "\n",
-        "-   $\\underset{(n,1)}{\\bf X} \\overset{l_1}{\\to} \\left( \\underset{(n,2)}{\\boldsymbol u^{(1)}} \\overset{relu}{\\to} \\underset{(n,2)}{\\boldsymbol v^{(1)}} \\right) \\overset{l_2}{\\to} \\left(\\underset{(n,1)}{\\boldsymbol u^{(2)}} \\overset{sig}{\\to} \\underset{(n,1)}{\\boldsymbol v^{(2)}}\\right), \\quad \\underset{(n,1)}{\\boldsymbol v^{(2)}}=\\underset{(n,1)}{net({\\bf X})}=\\underset{(n,1)}{\\hat{\\boldsymbol y}}$\n",
+        "-   $\\underset{(n,1)}{\\bf X}  \\overset{l_1}{\\to} \\left( \\underset{(n,2)}{\\boldsymbol u^{(1)}} \\overset{relu}{\\to} \\underset{(n,2)}{\\boldsymbol v^{(1)}} \\right) \\overset{l_2}{\\to} \\left(\\underset{(n,1)}{\\boldsymbol u^{(2)}} \\overset{sig}{\\to} \\underset{(n,1)}{\\boldsymbol v^{(2)}}\\right), \\quad  \\underset{(n,1)}{\\boldsymbol v^{(2)}}=\\underset{(n,1)}{net({\\bf X})}=\\underset{(n,1)}{\\hat{\\boldsymbol y}}$\n",
         "\n",
         "이것을 다이어그램으로 표현한다면 아래와 같다.\n",
         "\n",
@@ -855,7 +855,7 @@
         "\n",
         "아래의 아키텍처를 가지는 네트워크를 파이토치코드로 선언하라.\n",
         "\n",
-        "<figure>\n",
+        "<figure class=\"margin-caption\">\n",
         "<img\n",
         "src=\"https://d2908q01vomqb2.cloudfront.net/f1f836cb4ea6efb2a0b1b99f41ad8b103eff4b59/2017/10/06/intro-gluon-1.gif\"\n",
         "alt=\"출처: https://aws.amazon.com/ko/what-is/deep-learning/\" />\n",
@@ -864,7 +864,7 @@
         "class=\"uri\">https://aws.amazon.com/ko/what-is/deep-learning/</a></figcaption>\n",
         "</figure>"
       ],
-      "id": "7963a4b9-701f-4229-ac68-0b6bf3b82956"
+      "id": "2d8fea03-20a0-470e-bb30-5a93f8d17467"
     },
     {
       "cell_type": "code",
@@ -897,7 +897,7 @@
         "and the Theory of Brain Mechanisms*. Vol. 55. Spartan books Washington,\n",
         "DC."
       ],
-      "id": "8ac307d2-1cbd-463c-b2a2-94f191779a39"
+      "id": "7fbfc58d-ecde-46dc-a989-c365fff7bb95"
     }
   ],
   "nbformat": 4,
