--- a/docs/posts/08wk-1,2.out.ipynb
+++ b/docs/posts/08wk-1,2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "23abf26c-99d6-47ae-bf0a-d0e1056ddb8e"
+      "id": "6564f175-9fce-4bd1-8c85-51cad8221580"
     },
     {
       "cell_type": "code",
@@ -144,7 +144,7 @@
         "\n",
         "## A. Data"
       ],
-      "id": "8c19af82-619d-45d9-a49c-694eddaff640"
+      "id": "319180c4-af69-4e9a-adaf-4895e2824100"
     },
     {
       "cell_type": "code",
@@ -204,7 +204,7 @@
         "\n",
         "`-` 네트워크의 출력: (n,1,28,28)의 텐서"
       ],
-      "id": "70233025-1617-4299-b825-ad7e1835a641"
+      "id": "ccbbaf92-4772-4d4e-9191-21a10b2a60fe"
     },
     {
       "cell_type": "code",
@@ -279,7 +279,7 @@
         "\n",
         "`-` 네트워크의 출력: 0,1"
       ],
-      "id": "65b672fb-bf13-49d4-9d0e-d029ff41058a"
+      "id": "79cf8d5b-5103-4192-ae31-1594982e30ff"
     },
     {
       "cell_type": "code",
@@ -314,7 +314,7 @@
         "\n",
         "`-` 진짜이미지"
       ],
-      "id": "acbc265e-9190-4883-a6bb-1dd3f0ca0d90"
+      "id": "e9b2c4fd-9313-4378-a7fe-f7a4a4120edf"
     },
     {
       "cell_type": "code",
@@ -343,7 +343,7 @@
         "`-` 진짜 이미지를 경찰한테 한장 줘볼까? $\\to$ yhat이 나올텐데, 이 값이\n",
         "0이어야 함"
       ],
-      "id": "80ace796-6805-4d79-b956-af7c4e23332f"
+      "id": "66622fef-310f-416a-83ea-bf515c8f7f23"
     },
     {
       "cell_type": "code",
@@ -370,7 +370,7 @@
         "`-` 가짜이미지 – 데이터셋이 있는게 아니고 net_faker가 생성해야하는\n",
         "데이터"
       ],
-      "id": "a187150e-71e1-4393-95f2-b374772c4747"
+      "id": "ba6f4a2c-2075-4b28-87b2-0c2917f11059"
     },
     {
       "cell_type": "code",
@@ -426,7 +426,7 @@
         "`-` 가짜 이미지를 경찰한테 한장 줘볼까? $\\to$ yhat이 나올텐데, 이 값이\n",
         "1이어야 함"
       ],
-      "id": "998ad95e-3521-40d6-b6ef-08a61a161e08"
+      "id": "c1ec3cfd-2257-4dc8-9bd1-12e214d20687"
     },
     {
       "cell_type": "code",
@@ -451,7 +451,7 @@
         "`-` 페이커의 무능함 (왼쪽 이미지를 가짜이미라고 만들어 놓았음) + 경찰의\n",
         "무능함 (왼쪽과 오른쪽을 보고 뭐가 진짜인지도 모름)"
       ],
-      "id": "5d3e1223-7e4c-496d-874f-29e6dd8edf51"
+      "id": "1950bc03-b903-40fc-99a4-4aa74aa648ad"
     },
     {
       "cell_type": "code",
@@ -481,7 +481,7 @@
       "source": [
         "## E. 똑똑해진 경찰"
       ],
-      "id": "9e220aa9-749b-4e7d-a557-f206cd96cd8e"
+      "id": "5563730b-ddc7-4a5e-bbd3-4073836d4199"
     },
     {
       "cell_type": "code",
@@ -499,14 +499,16 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "`-` 데이터 정리 - 원래 $n=6131$개의 이미지 자료가 있음. 이를\n",
-        "${\\bf X}_{real}$ 라고 하자. 따라서 ${\\bf X}_{real}$ 의 차원은\n",
-        "(6131,1,28,28). - 위조범이 만든 가짜자료를 원래 자료와 같은 숫자인\n",
-        "6131개 만듦. 이 가짜자료를 ${\\bf X}_{fake}$ 라고 하자. 따라서\n",
-        "${\\bf X}_{fake}$ 의 차원은 (6131,1,28,28). - 진짜자료는 0, 가짜자료는\n",
-        "1으로 라벨링."
+        "`-` 데이터 정리\n",
+        "\n",
+        "-   원래 $n=6131$개의 이미지 자료가 있음. 이를 ${\\bf X}_{real}$ 라고\n",
+        "    하자. 따라서 ${\\bf X}_{real}$ 의 차원은 (6131,1,28,28).\n",
+        "-   위조범이 만든 가짜자료를 원래 자료와 같은 숫자인 6131개 만듦. 이\n",
+        "    가짜자료를 ${\\bf X}_{fake}$ 라고 하자. 따라서 ${\\bf X}_{fake}$ 의\n",
+        "    차원은 (6131,1,28,28).\n",
+        "-   진짜자료는 0, 가짜자료는 1으로 라벨링."
       ],
-      "id": "a5f44566-11cf-4b70-b82e-a95792bcd03f"
+      "id": "5d74a587-4e6a-49f1-8e23-fbf09055a115"
     },
     {
       "cell_type": "code",
@@ -529,7 +531,7 @@
       "source": [
         "`-` step1: X_real, X_fake를 보고 각가 yhat_real, yhat_fake를 만드는 과정"
       ],
-      "id": "2802b009-37b4-4c14-a2cd-ff7296526c66"
+      "id": "3cb7d034-64fd-4843-ae17-7bde1c6f60f7"
     },
     {
       "cell_type": "code",
@@ -552,7 +554,7 @@
         "(yhat_fake $\\approx$ y_fake) (2) 진짜이미지를 진짜라고 해야한다.\n",
         "(yhat_real $\\approx$ y_real)"
       ],
-      "id": "9e5c5594-f8d1-4a9c-a764-1b753e2d8cae"
+      "id": "f39145ee-0507-404e-a6b5-e2ff3e73beb7"
     },
     {
       "cell_type": "code",
@@ -574,7 +576,7 @@
       "source": [
         "`-` step3~4는 별로 특별한게 없음. 그래서 바로 epoch을 진행시켜보자."
       ],
-      "id": "8ba872b5-86fc-4a1d-85bc-4a0d4289f994"
+      "id": "31e0c7b1-c5fd-40f3-8277-7de4d9e4210a"
     },
     {
       "cell_type": "code",
@@ -617,7 +619,7 @@
       "source": [
         "`-` 훈련된 경찰의 성능을 살펴보자."
       ],
-      "id": "4558a7d8-d049-4617-9b8d-18e200b6f9f4"
+      "id": "a2a7aec2-c454-40fa-ae1b-4886cf480d6d"
     },
     {
       "cell_type": "code",
@@ -649,7 +651,7 @@
       "source": [
         "`-` 꽤 우수한 경찰이 되었음"
       ],
-      "id": "5e871379-dcec-42e4-9c11-c9fd796db856"
+      "id": "1301fe6c-348f-4954-a605-3430aceec7f4"
     },
     {
       "cell_type": "code",
@@ -681,7 +683,7 @@
         "\n",
         "`-` step1: Noise $\\to$ X_fake"
       ],
-      "id": "fb2637d7-848f-4b98-82bd-5a975e050a3e"
+      "id": "99c6dffb-9fe5-46f4-9112-8e6d3566916b"
     },
     {
       "cell_type": "code",
@@ -704,7 +706,7 @@
         "진짜라고 판단하는 것. 즉 `yhat_fake` $\\approx$ `y_real` 이어야 페이커의\n",
         "실력이 우수하다고 볼 수 있음."
       ],
-      "id": "d196e61a-ade5-43bd-bcd9-b8300fbbd005"
+      "id": "598899a3-db36-4cf5-bb2d-7cda54f82b1b"
     },
     {
       "cell_type": "code",
@@ -725,7 +727,7 @@
       "source": [
         "`-` step3~4는 별로 특별한게 없음. 그래서 바로 epoch을 진행시켜보자."
       ],
-      "id": "27bdb4b6-faa8-4c4a-94f3-31fc645ed54d"
+      "id": "9f073973-7f48-411c-8e6a-97c1e252c6e7"
     },
     {
       "cell_type": "code",
@@ -779,7 +781,7 @@
       "source": [
         "`-` 위조범의 실력향상을 감상해보자."
       ],
-      "id": "7c1e4e2b-0a64-4672-9d72-460e724a3ca2"
+      "id": "df160585-f270-4868-b00e-0dd7c3a1266b"
     },
     {
       "cell_type": "code",
@@ -828,7 +830,7 @@
         "\n",
         "> 두 적대적인 네트워크를 경쟁시키자!"
       ],
-      "id": "9940c4b5-b643-4083-aa85-c0f1ebef2583"
+      "id": "30813970-61bf-4555-90a9-582367d128e9"
     },
     {
       "cell_type": "code",
@@ -852,7 +854,7 @@
         "    torch.nn.Linear(in_features=64, out_features=64), # (n,64) -> (n,64)   \n",
         "    torch.nn.ReLU(),\n",
         "    torch.nn.Linear(in_features=64, out_features=784), # (n,64) -> (n,784) \n",
-        "    torch.nn.Sigmoid(), # 출력을 0~1로 눌러주는 역할.. -- 저는 이 레이어가 일종의 문화충격이었어요.. (시그모이드를 이렇게 쓴다고??)\n",
+        "    torch.nn.Sigmoid(), \n",
         "    Reshape2828()\n",
         ")\n",
         "bce = torch.nn.BCELoss()\n",
@@ -935,7 +937,7 @@
         "\n",
         "`-` 생성되는 이미지의 다양성이 부족한 경우가 발생함. (mode collapse)"
       ],
-      "id": "6a547f3a-b202-405f-8d9b-438f07d5b170"
+      "id": "86ab6c41-b44b-4619-9f65-5efe924838f9"
     }
   ],
   "nbformat": 4,
